[gd_scene load_steps=2 format=3 uid="uid://qycuxph27yih"]

[ext_resource type="Script" path="res://MainMenu/MenuControl.gd" id="1_4o5yk"]

[node name="MainMenu" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 655.0
script = ExtResource("1_4o5yk")

[node name="JoinButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 471.0
offset_top = 282.0
offset_right = 671.0
offset_bottom = 342.0
text = "Join"

[node name="HostButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 471.0
offset_top = 382.0
offset_right = 671.0
offset_bottom = 442.0
text = "Host"

[node name="RulesButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 471.0
offset_top = 482.0
offset_right = 671.0
offset_bottom = 542.0
text = "Rules"
